## Process this file with automake to produce Makefile.in
man_MANS = xfreerdp.1

EXTRA_DIST = \
	diagrams \
	ChangeLog \
	Doxyfile \
	FreeRDP_Design.odt \
	freerdp_software_design.lyx \
	ipv6.txt \
	licensing.txt \
	ntlmssp.txt \
	rdp-keyboard.odg \
	rdp-keyboard.txt \
	rdp-keyboard-repeat.txt \
	xfreerdp.1

