## Process this file with automake to produce Makefile.in

includedir = $(prefix)/include/freerdp
include_HEADERS = \
	freerdp/constants.h \
	freerdp/constants_capabilities.h \
	freerdp/constants_core.h \
	freerdp/constants_crypto.h \
	freerdp/constants_license.h \
	freerdp/constants_pdu.h \
	freerdp/constants_rail.h \
	freerdp/constants_rdpdr.h \
	freerdp/constants_ui.h \
	freerdp/constants_window.h \
	freerdp/freerdp.h \
	freerdp/chanman.h \
	freerdp/kbd.h \
	freerdp/keyboard.h \
	freerdp/locales.h \
	freerdp/rdpset.h \
	freerdp/types_ui.h \
	freerdp/vchan.h

