## Process this file with automake to produce Makefile.in

includedir = $(prefix)/include
nobase_include_HEADERS = \
	freerdp/constants_ui.h \
	freerdp/constants_vchan.h \
	freerdp/freerdp.h \
	freerdp/chanman.h \
	freerdp/kbd.h \
	freerdp/rdpext.h \
	freerdp/rdpset.h \
	freerdp/types_base.h \
	freerdp/types_ui.h \
	freerdp/vchan.h \
	freerdp/errinfo.h \
	freerdp/dvc.h \
	freerdp/utils/chan_plugin.h \
	freerdp/utils/datablob.h \
	freerdp/utils/memory.h \
	freerdp/utils/semaphore.h \
	freerdp/utils/unicode.h \
	freerdp/utils/wait_obj.h
